--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,15 @@
         android:layout_below="@+id/imageView"
         android:layout_alignStart="@+id/imageView"
         android:onClick="click1" />
+
+    <ImageButton
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/bb"
+        android:layout_below="@+id/button"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="22dp"
+        android:id="@+id/imageButton"
+        android:scaleType="fitCenter"
+        android:layout_width="200dp"
+        android:background="#00000000" />
 </RelativeLayout>
